--- a/Config/MyClash2.ini
+++ b/Config/MyClash2.ini
@@ -86,9 +86,9 @@ custom_proxy_group=🤹‍ ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日
 custom_proxy_group=⛔ 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=☘️ 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]♻️ 自动选择
-custom_proxy_group=📺 Bahamut`select`[]🇹🇼 台湾节点`[]🚀 节点选择
+custom_proxy_group=📺 Bahamut`select`[]🇹🇼 湾湾节点`[]🚀 节点选择
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*
-custom_proxy_group=📺 国内媒体`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
+custom_proxy_group=📺 国内媒体`select`[]🎯 全球直连`[]🇹🇼 湾湾节点`[]🇭🇰 香港节点
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎸 网易音乐`select`[]🎯 全球直连`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)`http://cp.cloudflare.com/generate_204`300,,50
