--- a/Config/MyClash2.ini
+++ b/Config/MyClash2.ini
@@ -103,7 +103,7 @@ custom_proxy_group=🇵🇭 菲佣节点`url-test`(PH|菲律宾|马尼拉|Philip
 custom_proxy_group=🇸🇦 沙特节点`url-test`(沙特阿拉伯|Saudi Arabia)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇮🇳 阿三节点`url-test`(印度|India|新德里|孟买)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇹🇷 土鸡节点`url-test`(土耳其|Turkey|Türkiye)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇦🇺 澳大利亚`url-test`(澳|堪培拉|墨尔本|悉尼|珀斯|霍巴特|)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇦🇺 澳大利亚`url-test`(澳大利亚|Australia|堪培拉|墨尔本|悉尼|珀斯|霍巴特)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇨🇦 加拿大节点`url-test`(加拿大|Canada|渥太华|温哥华|卡尔加里)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇬🇧 英国节点`url-test`(GB|英国|Great Britain)`http://cp.cloudflare.com/generate_204`300,,50
