--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -8,26 +8,25 @@ ruleset=💯️ TMDB,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=💯️ TMDB,https://raw.githubusercontent.com/akaet/openclash-rules/main/ruleset/TMDB.list
 ruleset=⛔ 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=☘️ 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=✈️ Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=🦜 Twitter,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
-ruleset=🤹‍ Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
+ruleset=🚁‍ Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
 ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
 ruleset=🚀 测速工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
+ruleset=🍏 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=🌺 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
-ruleset=🌺 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
-ruleset=🎶 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
+ruleset=🦚 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset=🦚 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
+ruleset=🪂 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🧿 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎅🏻 Disney,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=🎥 HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list
 ruleset=📀 Emby,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.list
 ruleset=🎻 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
-ruleset=🤹‍ ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=🎶 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
+ruleset=☃️‍ ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🧿 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎅🏻 Disney,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=🎸 网易音乐,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
@@ -60,30 +59,32 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Alibaba/Alibaba.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Huawei/Huawei.list
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
-ruleset=🚀 节点选择,[]FINAL
+ruleset=🐠 漏网之鱼,[]FINAL
+
 
 custom_proxy_group=💯️ TMDB`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
+custom_proxy_group=✈️ Telegram`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
 custom_proxy_group=🦜 Twitter`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🤹‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
+custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
 custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=🌎 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点
-custom_proxy_group=🌺 谷歌服务`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
+custom_proxy_group=🦚 谷歌服务`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`
+custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=📀 Emby`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🎶 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
+custom_proxy_group=🪂 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=🎅🏻 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
-custom_proxy_group=🤹‍ ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
+custom_proxy_group=☃️‍ ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇹🇷 土鸡节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🚀 节点选择`.*
 custom_proxy_group=⛔ 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=☘️ 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐠 漏网之鱼`select`[]🚀 节点选择`[]REJECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=📺 Bahamut`select`[]🇹🇼 湾湾节点`[]🚀 节点选择
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*
